src/objects/Case_Product_Information__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Alert__c</fullName>
        <label>Batch Alert</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Batch_Check_Cycle_Time__c</fullName>
        <description>Calculates the difference between Date CPI Status set to Completed and Date Batch Check set to Yes</description>
        <formula>Date_CPI_Status_set_to_Completed__c - Date_Batch_Check_set_to_Yes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Check Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Check_Location__c</fullName>
        <label>Batch Check Location</label>
        <picklist>
            <picklistValues>
                <fullName>CCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lebanon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matteson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newburyport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statesville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheeling Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheeling Technical</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Batch_Check__c</fullName>
        <label>Batch Check</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Batch_Manufacturing_Location__c</fullName>
        <description>ConsQuality - Batch manufacturing site pulled from custom settings Case Product Info Category = PLANT CODE</description>
        <inlineHelpText>Populated from 11i</inlineHelpText>
        <label>*Batch Manufacturing Location</label>
        <picklist>
            <picklistValues>
                <fullName>620 – Lebanon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600 – Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>310 – Statesville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>080 – Medina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>390 – Wheeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300 – Garland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>060 – Matteson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>370 – Newburyport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130 - CCA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bulk_Batch_Number__c</fullName>
        <description>Quality Team</description>
        <inlineHelpText>Populated from 11</inlineHelpText>
        <label>*Bulk Batch Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPI_Status__c</fullName>
        <label>CPI Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Batch Check Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Check Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting On More Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can_Sequence__c</fullName>
        <label>Can Sequence</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Defect_Type__c</fullName>
        <formula>TEXT (Case__r.Defect_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Defect Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>Case__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Case__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Reason_Opened__c</fullName>
        <formula>TEXT(Case__r.Reason_Opened__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Reason Opened</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Product Information</relationshipLabel>
        <relationshipName>Case_Product_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complaint_Confirmed__c</fullName>
        <description>For Quality Team only.</description>
        <inlineHelpText>For Quality Team Only. Indicates the Complaint information has been confirmed by the Quality Team.</inlineHelpText>
        <label>Complaint Confirmed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undetermined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Tested</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conclusion_Notes__c</fullName>
        <description>Quality Team: Only Quality Team can update. For their Notes and Conclusions on a Complaint Case</description>
        <inlineHelpText>Quality Team only to update with Conclusion Notes.</inlineHelpText>
        <label>Conclusion Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Batch_Check_set_to_Yes__c</fullName>
        <description>The date the Batch Check field is set to Yes</description>
        <label>Date Batch Check set to Yes</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_CPI_Status_set_to_Completed__c</fullName>
        <description>Capture the date the CPI Status field is set to &apos;Completed&apos;</description>
        <label>Date CPI Status set to Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Messages__c</fullName>
        <description>Error Messages returned from 11i/Legacy system calls</description>
        <label>Error Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fill_Batch_Number__c</fullName>
        <label>Fill Batch Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fill_Batch_Quantity__c</fullName>
        <description>Cons Quality - populated from 11i call</description>
        <inlineHelpText>Populated from 11i</inlineHelpText>
        <label>*Fill Batch Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <description>Quality Team</description>
        <inlineHelpText>Populated from 11</inlineHelpText>
        <label>*Formula</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number_Description__c</fullName>
        <description>Quality Team:  Free form text for now.  May convert into.  Waiting on a products object to auto-populate this from Item Number</description>
        <inlineHelpText>Populated from 11</inlineHelpText>
        <label>*Item Number Description</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <description>New custom Item Number field</description>
        <label>Item Number</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Size_Code__c</fullName>
        <formula>RIGHT((Item_Number__c),3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Size Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_with_Description__c</fullName>
        <formula>Item_Number__c &amp; &quot; - &quot; &amp;  Item_Number_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item with Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medina_Fill_Batch_Number__c</fullName>
        <description>Cons Quality Fill Batch Number for Medina populated from 11i</description>
        <inlineHelpText>Populated from 11i</inlineHelpText>
        <label>*Medina Fill Batch Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>Product Line of the Item from the 11i Item Master</description>
        <inlineHelpText>Populated from 11i</inlineHelpText>
        <label>*Product Line</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Item Quantity</description>
        <label>Purchased Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Settlement_Offer__c</fullName>
        <formula>Related_Settlement__r.Offer_Detail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Settlement Offer $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_Settlement_Total_Ext__c</fullName>
        <formula>Related_Settlement__r.Total_Ext__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Settlement Total Ext. $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_Settlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Settlement</label>
        <referenceTo>Settlement__c</referenceTo>
        <relationshipLabel>Case Product Information</relationshipLabel>
        <relationshipName>Case_Product_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retain_Number__c</fullName>
        <description>Retain Number from the 11i Quality Module for the Bulk Batch</description>
        <label>*Retain Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valtrack_Number__c</fullName>
        <label>Valtrack Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Hold__c</fullName>
        <label>Warehouse Hold</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Case Product Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Case__c</columns>
        <columns>NAME</columns>
        <columns>Item_Number__c</columns>
        <columns>Item_Number_Description__c</columns>
        <columns>CPI_Status__c</columns>
        <columns>Valtrack_Number__c</columns>
        <columns>Quantity__c</columns>
        <columns>Batch_Check__c</columns>
        <columns>Fill_Batch_Number__c</columns>
        <columns>Bulk_Batch_Number__c</columns>
        <columns>Formula__c</columns>
        <columns>Complaint_Confirmed__c</columns>
        <columns>Conclusion_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCPI</fullName>
        <columns>Case__c</columns>
        <columns>NAME</columns>
        <columns>Item_Number__c</columns>
        <columns>Item_Number_Description__c</columns>
        <columns>CPI_Status__c</columns>
        <columns>Valtrack_Number__c</columns>
        <columns>Quantity__c</columns>
        <columns>Batch_Check__c</columns>
        <columns>Fill_Batch_Number__c</columns>
        <columns>Bulk_Batch_Number__c</columns>
        <columns>Formula__c</columns>
        <columns>Complaint_Confirmed__c</columns>
        <columns>Conclusion_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CPI_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All Open CPI</label>
    </listViews>
    <listViews>
        <fullName>All_NARMIN</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Case__c</columns>
        <columns>Item_Number_Description__c</columns>
        <columns>Product_Line__c</columns>
        <columns>NAME</columns>
        <columns>Item_Number__c</columns>
        <columns>CPI_Status__c</columns>
        <columns>Valtrack_Number__c</columns>
        <columns>Quantity__c</columns>
        <columns>Batch_Check__c</columns>
        <columns>Fill_Batch_Number__c</columns>
        <columns>Bulk_Batch_Number__c</columns>
        <columns>Formula__c</columns>
        <columns>Complaint_Confirmed__c</columns>
        <columns>Conclusion_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All-NARMIN</label>
    </listViews>
    <listViews>
        <fullName>MyAllCPI</fullName>
        <columns>Case__c</columns>
        <columns>NAME</columns>
        <columns>Item_Number__c</columns>
        <columns>Item_Number_Description__c</columns>
        <columns>CPI_Status__c</columns>
        <columns>Valtrack_Number__c</columns>
        <columns>Quantity__c</columns>
        <columns>Batch_Check__c</columns>
        <columns>Fill_Batch_Number__c</columns>
        <columns>Bulk_Batch_Number__c</columns>
        <columns>Formula__c</columns>
        <columns>Complaint_Confirmed__c</columns>
        <columns>Conclusion_Notes__c</columns>
        <filterScope>Mine</filterScope>
        <label>My All CPI</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCPI</fullName>
        <columns>Case__c</columns>
        <columns>NAME</columns>
        <columns>Item_Number__c</columns>
        <columns>Item_Number_Description__c</columns>
        <columns>CPI_Status__c</columns>
        <columns>Valtrack_Number__c</columns>
        <columns>Quantity__c</columns>
        <columns>Batch_Check__c</columns>
        <columns>Fill_Batch_Number__c</columns>
        <columns>Bulk_Batch_Number__c</columns>
        <columns>Formula__c</columns>
        <columns>Complaint_Confirmed__c</columns>
        <columns>Conclusion_Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CPI_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Open CPI</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>CPI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Product Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Fill_Batch_Number_must_be_10_characters</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND( 
LEN(Fill_Batch_Number__c)&lt;10, 
LEN(Fill_Batch_Number__c)&gt;0
),
AND(
LEN(Fill_Batch_Number__c)&gt;10
)
)</errorConditionFormula>
        <errorMessage>Fill Batch Number must be 10 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Item_Number_must_be_15_characters</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND( 
LEN(Item_Number__c)&lt;15, 
LEN(Item_Number__c)&gt;0
),
AND(
LEN(Item_Number__c)&gt;15
)
)</errorConditionFormula>
        <errorMessage>Item Number must be 15 characters</errorMessage>
    </validationRules>
</CustomObject>